--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
   intl: ^0.17.0
+  flutter_form_builder: ^7.6.0
+  flutter_colorpicker: ^1.0.3
 
 dev_dependencies:
   flutter_test:
