--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   intl: ^0.17.0
   flutter_form_builder: ^7.6.0
   flutter_colorpicker: ^1.0.3
+  firebase_core: ^1.21.1
+  cloud_firestore: ^3.4.6
+  splashscreen: ^1.3.5
+  firebase_database: ^9.1.3
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
