--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cloud_firestore: ^3.4.6
   splashscreen: ^1.3.5
   firebase_database: ^9.1.3
+  firebase_auth: ^3.7.0
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
